# GCP

./: .gitignore  CMakeLists.txt  README.md
examples/: ExampleGenotypeConfidencePercentiler.cpp  Full.cpp  FullExample.cpp  Percentiler_only.cpp  example.cpp
examples/simple_genotyper/: simple_genotyper.cpp
ext/ranker/: ranker.h
src/: GCP.h  GenotypeConfidencePercentiler.h  GenotypeConfidenceSimulator.h  Genotyper.h  GenotyperInputProducer.h  Model.h  Percentiler.h  Simulator.h  custom_types.h
tests/: CMakeLists.txt  test_percentiler.cpp  test_percentiler_big.cpp  utils_test.cpp  utils_test.h
